public enum ActionType {
    MOVE,
    SCAN,
    SHUTOFF
}