public class Crater extends Obstacle {
    // Implementation specific to Crater can be added here. For now, it's just a type distinction.
}
