public abstract class Obstacle {
    // This class can be extended to add specific types of obstacles.
}
