public enum ScanResult {
    UNKNOWN,
    GRASS,
    OBSTACLE,
    EMPTY,
    FENCE;
}